# energy-detector

./: README.md
doc/: Mvsdk.md  nanodet_plus.md  openvino.md
src/energy_detector/: CMakeLists.txt  package.xml
src/energy_detector/include/energy_detector/: energy_search.h  nanodet_openvino.h
src/energy_detector/src/: energy_detector.cpp
src/energy_detector/src/energy_detector/: energy_search.cpp  nanodet_openvino.cpp
src/energy_detector/test/: nanodet_test.cpp
src/mindvisual_camera/: CMakeLists.txt  package.xml
src/mindvisual_camera/config/: camera_info.yaml
src/mindvisual_camera/src/: mindvisual_camera.cpp
src/serial_interface/: CMakeLists.txt  package.xml
src/serial_interface/msg/: PcStatu.msg  SelfInfo.msg
src/serial_interface/srv/: ControlFrame.srv
src/target_msg/: CMakeLists.txt  package.xml
src/target_msg/msg/: Armor.msg  Target.msg  Targets.msg
tools/: generate_label.py  voc2coco.py
